# exercise3

./: CMakeLists.txt
include/: counter.h
src/: counter.c  counter_handler  counter_handler.c  main.c
